tests/snapshots/yaml_suite_snapshots__yaml_suite_SF5V_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Duplicate YAML directive
  tags: directive error
  tree: "+STR\n"
  yaml: "%YAML 1.2\n%YAML 1.2\n---\n"
