tests/snapshots/yaml_suite_snapshots__yaml_suite_SKE5_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nseq: &anchor\n- a\n- b\n"
  from: "@perlpunk"
  json: "{\n  \"seq\": [\n    \"a\",\n    \"b\"\n  ]\n}\n"
  name: Anchor before zero indented sequence
  tags: anchor indent sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :seq\n   +SEQ &anchor\n    =VAL :a\n    =VAL :b\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nseq:\n &anchor\n- a\n- b\n"
