tests/snapshots/yaml_suite_snapshots__yaml_suite_SM9W_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Single character streams
  from: "@ingydotnet"
  tags: sequence
  yaml: "-∎\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :\n  -SEQ\n -DOC\n-STR\n"
  json: "[null]\n"
  dump: "-\n"
- tags: mapping
  yaml: ":∎\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  json: null
  dump: ":\n"
