tests/snapshots/yaml_suite_snapshots__yaml_suite_SM9W_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "-\n"
  from: "@ingydotnet"
  json: "[null]\n"
  name: Single character streams
  tags: sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :\n  -SEQ\n -DOC\n-STR\n"
  yaml: "-∎\n"
- dump: ":\n"
  json: null
  tags: mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: ":∎\n"
