tests/snapshots/yaml_suite_snapshots__yaml_suite_SR86_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Anchor plus Alias
  from: "@perlpunk"
  tags: alias error
  fail: true
  yaml: "key1: &a value\nkey2: &b *a\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key1\n   =VAL &a :value\n   =VAL :key2\n"
