tests/snapshots/yaml_suite_snapshots__yaml_suite_SR86_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Anchor plus Alias
  tags: alias error
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key1\n   =VAL &a :value\n   =VAL :key2\n"
  yaml: "key1: &a value\nkey2: &b *a\n"
